#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package MsgLogger
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-06
2008-12-17 Andy Salnikov
- fixed small memory leak in MsgHandler, formatter was not deleted 
  in the destructor

Tag: V00-00-05
2008-12-02 Andy Salnikov
- changed logic in MsgFormatter so that envvar format strings have
  priority over the application-global strings

Tag: V00-00-04
2008-12-02 Andy Salnikov
- new 'fatal' level added, causes immediate termination (via abort())
- MsgFormatter class has new static methods to modify global format strings
  common to all handlers. global format strings are used when formatter 
  does not provide its own strings.

Tag: V00-00-03
2008-11-03 Andy Salnikov
- updated README file

Tag: V00-00-02
2008-11-03 Andy Salnikov
- Few optimizations and small refactoring

Tag: V00-00-01
2008-10-07 Andy Salnikov
- Copied it from BaBar, made few serious modifications. Check README.