@@ -1,4 +1,4 @@
-# $Id: README,v 1.3 2007/02/11 03:24:25 salnikov Exp $
+# $Id$
 
 Package: MsgLogger
 Date   : 2005-07-20, updated 2008-10-28
