@@ -2,7 +2,7 @@
 //
 // This is the History file for MsgLogger
 //
-// $Id: History,v 1.5 2007/02/11 03:24:24 salnikov Exp $
+// $Id$
 //
 //------------------------------------------------------------
 
